# shadowfox

./: Procfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
ShadowFox/: .gitignore  __init__.py  beginer_level_qn2.1.py  beginer_level_qn2.2.py  beginer_level_qn2.3.py  beginer_level_qn4.3.py  beginer_level_qn7.py  beginer_level_qn8.py  week1.py
ShadowFox/Advance_Level/: pyproject.toml
ShadowFox/Advance_Level/.streamlit/: config.toml
ShadowFox/Advance_Level/GEMINI_INTERGRATION/: app.py  pyproject.toml
ShadowFox/Advance_Level/GEMINI_INTERGRATION/.streamlit/: config.toml
ShadowFox/Advance_Level/GEMINI_INTERGRATION/attached_assets/: Pasted-3-Embark-on-an-AIdriven-journey-in-the-realm-of-natural-language-processing-NLP-and-machine-learn-1753206424603_1753206424604.txt
ShadowFox/Advance_Level/GEMINI_INTERGRATION/data/: sample_prompts.py
ShadowFox/Advance_Level/GEMINI_INTERGRATION/modules/: analysis_engine.py  gemini_client.py  research_framework.py
ShadowFox/Advance_Level/GEMINI_INTIGRATION/: app.py
ShadowFox/Advance_Level/GEMINI_INTIGRATION/.streamlit/: secrets.toml
ShadowFox/Advance_Level/GEMINI_INTIGRATION/utils/: rate_limiter.py  text_processor.py
ShadowFox/Advance_Level/modules/: analysis_engine.py  gemini_client.py  visualization.py
ShadowFox/Beginer_level_task/: __init__.py  beginer_level_qn3.py  beginer_level_qn4.1.py  beginer_level_qn4.2.py  beginer_level_qn9.py
ShadowFox/Intermediate_level_task/: task2.1.py  task2.2.py
