[tool.poetry]
name = "shadowfox"
version = "0.1.0"
description = "A Python project for web scraping and AI integration"
authors = ["anubhab0101"]
packages = [
    { include = "ShadowFox" },
    { include = "ShadowFox/Advance_Level/GEMINI_INTERGRATION" },
    { include = "ShadowFox/Beginer_level_task" },
    { include = "ShadowFox/Intermediate_level_task" }
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"
selenium = "^4.11.2"
requests = "^2.31.0"
Pillow = "^10.0.0"
google-generativeai = "^0.2.0"
python-dotenv = "^1.0.0"
plotly = "^5.16.1"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
