[tool.poetry]
name = "Anubhab_AI_Gemini_init"
version = "0.1.0"
description = "python devloper"
authors = ["Anubhab Mohapatra <www.anubhabmahapatra44@gmail.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.11"
google-genai = ">=1.26.0"
nltk = ">=3.9.1"
numpy = ">=2.3.1"
pandas = ">=2.3.1"
plotly = ">=6.2.0"
requests = ">=2.32.4"
scipy = ">=1.16.0"
streamlit = ">=1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"